--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>小一 · TRTC 拨号器（修正版）</title>
+  <title>小一 · TRTC 拨号器（完整版）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: sans-serif; padding: 20px; background: #f5f5f5; }
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>小一 · TRTC 拨号器（修正版）</h1>
+  <h1>小一 · TRTC 拨号器（完整版）</h1>
 
   <div class="group">
     <label>SDKAppID</label>
@@ -43,7 +43,7 @@
 
   <div id="log"></div>
 
-  <script src="https://liteav.sdk.qcloud.com/trtc/webrtc/trtc.min.js"></script>
+  <script src="trtc.min.js"></script>
   <script>
     const logEl = document.getElementById('log');
     function log(msg) {
